--- a/.github/workflows/.build.yml
+++ b/.github/workflows/.build.yml
@@ -23,8 +23,7 @@ jobs:
         build_quest2_oculus: false
         #itchio_user: afloofdev
         #itchio_project: test_project
-    secrets:
-        AVDL_NO_VALUE: 0
+        #secrets:
         # required for android
         #ANDROID_KEYSTORE: ${{ secrets.KEYSTORE }}
         #ANDROID_KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
