--- a/.github/workflows/.build.yml
+++ b/.github/workflows/.build.yml
@@ -13,13 +13,13 @@ jobs:
     uses: tomtsagk/avdl/.github/workflows/.compile_avdl_project.yml@814e7da99e803e438f1d1dd6f707e2c44eb0584b
     with:
         project_name: avdl_editor
-        build_android: true
+        build_android: false
         build_android_googleplay: false
         build_ads: false
         build_steam: false
-        build_linux: true
-        build_windows: true
-        build_quest2: true
+        build_linux: false
+        build_windows: false
+        build_quest2: false
         build_quest2_oculus: false
         #itchio_user: afloofdev
         #itchio_project: test_project
